--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@
 .idea/gradle.xml
 .idea/libraries
 .gradle
+/build
 
 # Mongo Explorer plugin:
 .idea/mongoSettings.xml
@@ -98,3 +99,16 @@ nbproject
 .project
 .settings
 composer.lock
+
+# External native build folder generated in Android Studio 2.2 and later
+.externalNativeBuild
+
+# Android Studio Navigation editor temp files
+.navigation/
+
+# Android Studio captures folder
+captures/
+
+# Local configuration file (sdk path, etc)
+local.properties
+
