circle.yml updated again

--- a/PeridotCoZAndroid/circle.yml
+++ b/PeridotCoZAndroid/circle.yml
@@ -2,13 +2,9 @@
 # Build configuration for Circle CI
 #
 
-general:
-    artifacts:
-        - /home/ubuntu/PeridotCoZAndroid/app/build/outputs/apk/
-
 machine:
-    environment:
-        ANDROID_HOME: /usr/local/android-sdk-linux
+    java:
+        version: oraclejdk8
 
 dependencies:
     override:
