--- a/PeridotCoZAndroid/app/src/main/AndroidManifest.xml
+++ b/PeridotCoZAndroid/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".RegisterActivity" />
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".LoggedInActivity"></activity>
     </application>
 
 </manifest>
