--- a/circle.yml
+++ b/circle.yml
@@ -11,6 +11,7 @@ machine:
 
 dependencies:
     override:
+        - chmod +x ./PeridotCoZAndroid/gradlew
         - echo y | android update sdk --no-ui --all --filter tools,platform-tools,build-tools-25.0.2,android-25,extra-google-m2repository,extra-google-google_play_services,extra-android-support
         - ANDROID_HOME=/usr/local/android-sdk-linux ./PeridotCoZAndroid/gradlew dependencies
 
