--- a/circle.yml
+++ b/circle.yml
@@ -3,7 +3,7 @@
 #
 general:
     artifacts:
-    - /home/ubuntu/peridot-coz-android/PeridotCoZAndroid/app/build/outputs/apk/
+    - /home/ubuntu/peridot-coz-android/app/build/outputs/apk/
 
 machine:
     java:
@@ -11,10 +11,9 @@ machine:
 
 dependencies:
     override:
-        - chmod +x ./PeridotCoZAndroid/gradlew
-        - cd ./PeridotCoZAndroid/
+        - chmod +x ./gradlew
         - echo y | android update sdk --no-ui --all --filter tools,platform-tools,build-tools-25.0.2,android-25,extra-google-m2repository,extra-google-google_play_services,extra-android-support
-        - ANDROID_HOME=/usr/local/android-sdk-linux ./PeridotCoZAndroid/gradlew dependencies
+        - ANDROID_HOME=/usr/local/android-sdk-linux ./gradlew dependencies
 
 test:
     override:
