--- a/circle.yml
+++ b/circle.yml
@@ -9,7 +9,7 @@ machine:
     java:
         version: oraclejdk8
     environment:
-        ANDROID_HOME=/usr/local/android-sdk-linux
+        ANDROID_HOME: /usr/local/android-sdk-linux
 
 dependencies:
     override:
