--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.1.0'
     testCompile 'junit:junit:4.12'
-    compile 'com.android.volley:volley:1.0.0'
     compile 'org.projectlombok:lombok:1.16.12'
+    testCompile 'org.robolectric:robolectric:3.2.2'
+
 }
