--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".activity.LoginActivity">
+        </activity>
+
+        <activity android:name=".activity.LoggedInActivity">
+        </activity>
+
     </application>
 
 </manifest>
