--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.MainActivity">
+        <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -20,10 +20,6 @@
 
         <activity android:name=".activity.LoginActivity">
         </activity>
-
-        <activity android:name=".activity.LoggedInActivity">
-        </activity>
-
     </application>
 
 </manifest>
