--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'org.projectlombok:lombok:1.16.12'
     testCompile 'org.robolectric:robolectric:3.2.2'
+    compile 'com.google.dagger:dagger:2.4'
+    annotationProcessor "com.google.dagger:dagger-compiler:2.4"
+    provided 'javax.annotation:jsr250-api:1.0'
 }
