--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,10 +18,11 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".activity.LoginActivity">
+        <activity android:name=".activity.RegisterActivity">
         </activity>
 
-
+        <activity android:name=".activity.LoginActivity">
+        </activity>
     </application>
 
 </manifest>
