--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     testCompile 'org.robolectric:robolectric:3.2.2'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.4'
     provided 'javax.annotation:jsr250-api:1.0'
+    compile 'com.github.kimkevin:cachepot:1.1.0'
 }
