trying out stuff with syncreceiver, functional in receiving alarms, but does not do anything

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,11 +3,13 @@
     package="com.greenfox.peridot.peridot_coz_android">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <permission android:name="com.greenfox.peridot.peridot_coz_android.backgroundSync.SyncService.SYNC_DONE"
-        android:label="sync_permission"
-        android:protectionLevel="dangerous">
-    </permission>
-    <uses-permission android:name="com.greenfox.peridot.peridot_coz_android.backgroundSync.SyncService.SYNC_DONE" />
+    <!--<permission android:name="com.greenfox.peridot.peridot_coz_android.backgroundSync.SyncService.SYNC_DONE"-->
+        <!--android:label="sync_permission"-->
+        <!--android:protectionLevel="dangerous">-->
+    <!--</permission>-->
+    <!--<uses-permission android:name="com.greenfox.peridot.peridot_coz_android.backgroundSync.SyncService.SYNC_DONE" />-->
+    <uses-permission android:name="com.android.alarm.permission.SET_ALARM" />
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
         android:allowBackup="true"
@@ -29,11 +31,11 @@
         <activity android:name=".activity.LoginActivity">
         </activity>
 
-        <service android:name="com.greenfox.peridot.peridot_coz_android.backgroundSync.SyncService"
-            android:exported="false"
-            android:permission="com.greenfox.peridot.peridot_coz_android.backgroundSync.SyncService.SYNC_DONE" >
-        </service>
-
+        <!--<service android:name="com.greenfox.peridot.peridot_coz_android.backgroundSync.SyncService"-->
+            <!--android:exported="false"-->
+            <!--android:permission="com.greenfox.peridot.peridot_coz_android.backgroundSync.SyncService.SYNC_DONE" >-->
+        <!--</service>-->
+        <receiver android:name=".backgroundSync.SyncReceiver" />
     </application>
 
 </manifest>
