We can login to server

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:protectionLevel="dangerous">
     </permission>
     <uses-permission android:name="com.greenfox.peridot.peridot_coz_android.backgroundSync.SyncService.SYNC_DONE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:name=".CozApp"
