--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     provided 'javax.annotation:jsr250-api:1.0'
     compile 'com.android.support:cardview-v7:25.1.0'
     compile 'com.android.support:recyclerview-v7:25.1.0'
+    compile 'org.greenrobot:eventbus:3.0.0'
 }
